deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cookbook
  labels:
    name: cookbook
    app: cookbook
